[project]
name = "pythonz_enum"
version = "0.2.0"
description = "enums for pythonz"
authors = [
    {name = "Yuichiro Smith", email = "yu-ichiro@s3i7h.com"},
]
dependencies = [
    "pythonz_pipe>=0.1.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
